css/styles.css
 /**
   Name - Raj Trivedi
   Assignment Name - Responsive Personal Portfolio Website
   Date - October 28th, 2021
 **/
 
 body{ 
    background-color: whitesmoke;
    overflow-y: auto;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }


@media screen and (max-width: 1500px) {
   /* For mobile phones: */
   /* 1vw = 6.5px --- Viewport width = (Pixel value / 6.5) */
   .header, .footer{
     width: 100%;
   }

   img{
      max-width: 100%;
   }

   .homepageSectionsTitle{
      text-align: center;
   }
   .homepageSectionsContent{
      left: 100%;
   }
   
/* Can be used to debug the process
   body{
         background-color: red;
   }
*/
}

 span a, .dropbtn {
   display: inline-block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-family: fantasy;
   font-size:20px;
 }
 
 span a:hover, .dropdown:hover .dropbtn {
   background-color: white;
   color: black;
   font-family: fantasy;
   font-size:20px;
 }
 
 span.dropdown {
   display: inline-block;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   font-family: fantasy;
   font-size:20px;
 }
 
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1;}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
 #homepageHeading{
    text-align: center;
 }

 .homepageSectionsTitle{
    margin-left: 80px;
 }

 .homepageSectionsContent{
   margin-left: 10px;
}

 .footer{
   clear: both;
   text-align: center;
   background-color: rgb(133, 57, 57); 
   padding: 20px 20px;
}

.footer img{
   cursor: pointer;
}

.footer a{
   text-decoration: underline;
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size:20px;
}

#form-container-for-laptop img, #form-container-for-smallscreens{
   cursor: pointer;
}

#social-media-icons-container{
   background-color: whitesmoke;
}

em{
   color: white;
}

 .header{
    overflow: hidden;
    text-align: center;
    background-color: rgb(133, 57, 57); 
    padding: 10px 10px;
 }
 .header #homePageLink, #contactFormLink, #workPageLink, #eventsPageLink{
    text-decoration: none;
    color: white;
    font-family:fantasy;
    font-size:20px;
 }
 .header #homePageLink:hover, #contactFormLink:hover, #workPageLink:hover, #eventsPageLink:hover{
    text-decoration: underline;
 }

 #homepageTitle, #workpageSectionOneTitle, #workpageSectionTwoTitle{
    text-align: center;
    font-family: 'Times New Roman', Times, serif;
    font-size: 50px;
 }

 #code_for_good_img-container, #acm_img-container{
    text-align: center;
 }

 #workpage-container, #eventsPage-container{
    margin-left: 30px;
    margin-right: 30px;
 }

 #workpageSectionTwo{
    text-align: center;
 }

 #resumeViewerSection{
    display: block;
 }

 #resumeNotSupportedSection{
   display: none;
 }

 #eventOne-description, #eventTwo-description{
    clear: both;
 }

 #projectOneTitle, #projectTwoTitle, #projectThreeTitle, #eventOneTitle, #eventTwoTitle{
    font-weight: bold;
    font-size: 20px;
    text-decoration: underline;
    text-align: center;
 }
 
 #my_image{
    position: relative;
    top: 5px;
    width: 600px;
    height: 650px;
    float: right;
 }

 iframe{
   width: 700px;
   height: 960px;
 }

 #heading{
    text-align: center;
 }
 #education #ud_image{
    float: left;
 }

 #jpmc_image{
    float:left;
 }
 
 #singing-img-text{
     float:left;
     margin-left: 150px;
 }
 #meditation-img-text{
    float:left;
    margin-left: 230px;
 }
 #nature-img-text{
    float:left;
    margin-left: 130px;
 }
 #sports-img-text{
    float:left;
    margin-left: 190px;
 }
 #interestingFact #small_baby_image{
    margin-left: 20px;
    margin-bottom: 30px;
    float: left;
 }

 #bulleted-list{
    list-style-position:inside;
 }

 #form-container-for-laptop{
    display: block;
    position: relative;
    left: 200px;
    top: 100px;
 }

 #form-container-for-smallscreens{
    display: none;
 }

 #form-container-for-laptop #contact_form{
    position: relative;
    left: 400px;
    top: -220px;
 }

 #user_fname, #user_lname, #user_email, #user_phone{
    width: 300px;
    height: 30px;
 }
 
 .anchorButtons{
   background-color: #199319;
   color: white;
   padding: 30px 50px;
   text-decoration: none;
 }

 button{
    font-size: 20px;
    width: 250px;
    height: 100px; 
    color:black; 
    padding: 10px 10px; 
    border-radius: 12px;
    transition-duration: 0.4s;
 }

 button:hover{
    background-color: black;
    color: white;
 }

